minor fix + js collapse

--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -58,6 +58,7 @@
       }
       h2 {
         font-size: 18px;
+        padding-left: 20px;
       }
       .meta {
       position: relative;
